fix: hamburger button styles

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@ button#app-list {
   color: #fff;
   font-size: 23px;
   border-color: #000;
+  padding-top: 5px;
+}
+
+button:focus {
+  outline: none;
 }
 
 .app-title {
